--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "hyperf/memory": "~3.0.0",
         "hyperf/process": "~3.0.0",
         "hyperf/redis": "~3.0.0",
-        "ramsey/uuid": "^4.7"
+        "lambdish/phunctional": "^2.1",
+        "ramsey/uuid": "^4.7",
+        "symfony/messenger": "^6.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
