--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "description": "A coroutine framework that focuses on hyperspeed and flexible, specifically use for build microservices and middlewares.",
     "license": "Apache-2.0",
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "hyperf/cache": "~3.0.0",
         "hyperf/command": "~3.0.0",
         "hyperf/config": "~3.0.0",
@@ -31,6 +31,7 @@
         "symfony/messenger": "^6.2"
     },
     "require-dev": {
+        "filp/whoops": "^2.14",
         "friendsofphp/php-cs-fixer": "^3.0",
         "hyperf/devtool": "~3.0.0",
         "hyperf/testing": "~3.0.0",
